--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 		<title>My Portfolio</title>
 	</head>
 	<body>
 		<header>
-			<div class="brand">My Portfolio</div>
+			<div id="nav" class="brand">My Brand</div>
+			<div class="nav-menu">
+				<ul class="nav-container">
+					<li class="nav-item"><a href="#">Portfolio</a></li>
+					<li class="nav-item"><a href="#">About</a></li>
+					<li class="nav-item"><a href="#">Contact</a></li>
+				</ul>
+			</div>
 		</header>
 	</body>
 </html>
