Add more Readme Content Use Backround-image(css property) For heading image

--- a/index.html
+++ b/index.html
@@ -71,12 +71,7 @@
 					not hesitate to contact me
 				</p>
 			</div>
-			<div class="image">
-				<img
-					src="https://wizzy-techno.netlify.app/techno_img/7hexa1dark.png"
-					alt="Headline image"
-				/>
-			</div>
+			<div class="image"></div>
 		</section>
 	</body>
 </html>
