Created project and about sections Add image folder

--- a/index.html
+++ b/index.html
@@ -25,47 +25,214 @@
 				</nav>
 			</nav>
 		</header>
-		<section class="headline">
-			<div class="social-network">
-				<ul>
-					<li>
-						<a href="#" class="facebook">
-							<i class="fa-brands fa-facebook"></i>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="github">
-							<i class="fa-brands fa-github"></i>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="twitter">
-							<i class="fa-brands fa-twitter"></i>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="Instagram">
-							<i class="fa-brands fa-instagram"></i>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="linkedin">
-							<i class="fa-brands fa-linkedin"></i>
-						</a>
-					</li>
-				</ul>
+		<section id="headline">
+			<div class="headline">
+				<div class="social-network">
+					<ul>
+						<li>
+							<a href="#" class="facebook">
+								<i class="fa-brands fa-facebook"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="github">
+								<i class="fa-brands fa-github"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="twitter">
+								<i class="fa-brands fa-twitter"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="Instagram">
+								<i class="fa-brands fa-instagram"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="linkedin">
+								<i class="fa-brands fa-linkedin"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="resume">
+					<h1>
+						Hey There. <br />
+						<span>I'm Guishny</span>
+					</h1>
+					<h4>I'm a software Developer</h4>
+					<p class="desc">
+						Hello I’m a software developer! I can help you build a product ,
+						feature or website Look through some of my work and experience! If
+						you like what you see and have a project you need coded, don’t
+						hestiate to contact me.
+					</p>
+				</div>
 			</div>
+		</section>
+		<section class="my-work" id="my-work">
+			<h1 class="section-title">My Recents works</h1>
+			<div class="container cards works grid" id="cards-container">
+				<!-- Card -->
+				<div class="card-featured format" id="card">
+					<div class="featured-image">
+						<img src="./images/Img-Placeholder.png" alt="" />
+					</div>
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+						<button class="see-project-btn" id="see-project">
+							See Project
+						</button>
+					</div>
+				</div>
+				<!-- Card -->
+				<div class="card format" id="card">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn" id="see-project">See Project</button>
+				</div>
+				<!-- Card -->
+				<div class="card format" id="card">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn" id="see-project">See Project</button>
+				</div>
+				<!-- Card -->
+				<div class="card format" id="card">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn" id="see-project">See Project</button>
+				</div>
+				<!-- Card -->
+				<div class="card format" id="card">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn" id="see-project">See Project</button>
+				</div>
+				<!-- Card -->
+				<div class="card format" id="card">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn" id="see-project">See Project</button>
+				</div>
+				<!-- Card -->
+				<div class="card format" id="card">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn" id="see-project">See Project</button>
+				</div>
+			</div>
+		</section>
+		<section class="about-me" id="about-me">
 			<div class="resume">
-				<h1>
-					Hey There. <br />
-					<span>I'm Guishny</span>
-				</h1>
-				<h4>I'm a software Developer</h4>
-				<p class="desc">
-					I can help you to build beautiful projects, modern and responsive
-					websites, you can see my work on this page, if you are interested do
-					not hesitate to contact me
+				<h1>About me</h1>
+				<p class="resume-text">
+					Hello I’m a software developer! I can help you build a product ,
+					feature or website Look through some of my work and experience! If you
+					like what you see and have a project you need coded, don’t hestiate to
+					contact me.
 				</p>
+				<button class="get-myresume-btn">Get my resume</button>
+			</div>
+			<div class="competence">
+				<ul class="competence-list">
+					<li class="competence-item list-title languages">Languages</li>
+					<li class="competence-item">Javascript</li>
+					<li class="competence-item">Ruby</li>
+					<li class="competence-item">Css</li>
+					<li class="competence-item">Html</li>
+				</ul>
+				<ul class="competence-list">
+					<li class="competence-item list-title frameworks">Frameworks</li>
+					<li class="competence-item">Bootstrap</li>
+					<li class="competence-item">React</li>
+					<li class="competence-item">Gatsby</li>
+					<li class="competence-item">Laravel</li>
+				</ul>
+				<ul class="competence-list">
+					<li class="competence-item list-title skills">Skills</li>
+					<li class="competence-item">Github</li>
+					<li class="competence-item">Codepen</li>
+					<li class="competence-item">Codesandbox</li>
+					<li class="competence-item">Replit</li>
+				</ul>
 			</div>
 		</section>
 	</body>
