fix linter errors

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<h1 class="section-title">My Recents works</h1>
 			<div class="container cards works grid" id="cards-container">
 				<!-- Card -->
-				<div class="card-featured format" id="card">
+				<div class="card-featured format">
 					<div class="featured-image">
 						<img src="./images/Img-Placeholder.png" alt="" />
 					</div>
@@ -91,13 +91,11 @@
 							<li>Css</li>
 							<li>Javascript</li>
 						</ul>
-						<button class="see-project-btn" id="see-project">
-							See Project
-						</button>
+						<button class="see-project-btn">See Project</button>
 					</div>
 				</div>
 				<!-- Card -->
-				<div class="card format" id="card">
+				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
 						<p class="work-description">
@@ -111,10 +109,10 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn" id="see-project">See Project</button>
+					<button class="see-project-btn">See Project</button>
 				</div>
 				<!-- Card -->
-				<div class="card format" id="card">
+				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
 						<p class="work-description">
@@ -128,10 +126,10 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn" id="see-project">See Project</button>
+					<button class="see-project-btn">See Project</button>
 				</div>
 				<!-- Card -->
-				<div class="card format" id="card">
+				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
 						<p class="work-description">
@@ -145,10 +143,10 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn" id="see-project">See Project</button>
+					<button class="see-project-btn">See Project</button>
 				</div>
 				<!-- Card -->
-				<div class="card format" id="card">
+				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
 						<p class="work-description">
@@ -162,10 +160,10 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn" id="see-project">See Project</button>
+					<button class="see-project-btn">See Project</button>
 				</div>
 				<!-- Card -->
-				<div class="card format" id="card">
+				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
 						<p class="work-description">
@@ -179,10 +177,10 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn" id="see-project">See Project</button>
+					<button class="see-project-btn">See Project</button>
 				</div>
 				<!-- Card -->
-				<div class="card format" id="card">
+				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
 						<p class="work-description">
@@ -196,7 +194,7 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn" id="see-project">See Project</button>
+					<button class="see-project-btn">See Project</button>
 				</div>
 			</div>
 		</section>
