--- a/index.html
+++ b/index.html
@@ -233,5 +233,48 @@
 				</ul>
 			</div>
 		</section>
+		<section id="form-section">
+			<div id="form-text" class="form-text">
+				<p class="text">
+					I'm always interested in hearing about new projects, so if you'd like
+					to chat please get in touch.
+				</p>
+			</div>
+			<form
+				action="https://formspree.io/f/{form}"
+				id="form"
+				method="post"
+				class="form"
+			>
+				<ul>
+					<li>
+						<input
+							type="text"
+							id="name"
+							placeholder="Full Name"
+							required
+							maxlength="30"
+						/>
+					</li>
+					<li>
+						<input
+							type="email"
+							id="email"
+							required
+							placeholder="Email Address"
+						/>
+					</li>
+					<li>
+						<textarea name="text" id="text" required maxlength="500">
+							Enter text here 
+						</textarea
+						>
+					</li>
+					<li>
+						<button type="submit">Get in Touch</button>
+					</li>
+				</ul>
+			</form>
+		</section>
 	</body>
 </html>
