Add style to form element

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 				class="form"
 			>
 				<ul>
-					<li>
+					<li class="form_item">
 						<input
 							type="text"
 							id="name"
@@ -256,7 +256,7 @@
 							maxlength="30"
 						/>
 					</li>
-					<li>
+					<li class="form_item">
 						<input
 							type="email"
 							id="email"
