--- a/index.html
+++ b/index.html
@@ -266,15 +266,45 @@
 					</li>
 					<li>
 						<textarea name="text" id="text" required maxlength="500">
-							Enter text here 
-						</textarea
+Enter text here</textarea
 						>
 					</li>
 					<li>
-						<button type="submit">Get in Touch</button>
+						<button type="submit" class="see-project-btn frm-btn">
+							Get in Touch
+						</button>
 					</li>
 				</ul>
 			</form>
+			<div class="social-media">
+				<ul class="social-media-container">
+					<li class="item">
+						<a href="#" class="facebook">
+							<i class="fa-brands fa-facebook"></i>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" class="github">
+							<i class="fa-brands fa-github"></i>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" class="twitter">
+							<i class="fa-brands fa-twitter"></i>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" class="Instagram">
+							<i class="fa-brands fa-instagram"></i>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" class="linkedin">
+							<i class="fa-brands fa-linkedin"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</section>
 	</body>
 </html>
