--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 				method="post"
 				class="form"
 			>
-				<ul>
+				<ul class="form-container">
 					<li class="form_item">
 						<input
 							type="text"
@@ -270,7 +270,7 @@ Enter text here</textarea
 						>
 					</li>
 					<li>
-						<button type="submit" class="see-project-btn frm-btn">
+						<button type="submit" class="see-project-btn frm-btn frm-btn">
 							Get in Touch
 						</button>
 					</li>
