Fix Linter errors

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 				</p>
 			</div>
 			<form
-				action="https://formspree.io/f/{form}"
+				action="https://formspree.io/f/form"
 				id="form"
 				method="post"
 				class="form"
