Update my code according to my reviewer's requirements

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 				</p>
 			</div>
 			<form
-				action="https://formspree.io/f/form"
+				action="https://formspree.io/f/mjvlpdpv"
 				id="form"
 				method="post"
 				class="form"
@@ -265,9 +265,13 @@
 						/>
 					</li>
 					<li>
-						<textarea name="text" id="text" required maxlength="500">
-Enter text here</textarea
-						>
+						<textarea
+							name="text"
+							id="text"
+							required
+							maxlength="500"
+							placeholder="Enter text here"
+						></textarea>
 					</li>
 					<li>
 						<button type="submit" class="see-project-btn frm-btn frm-btn">
