Implement desktop version of contact-form and footer sections

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 					<li class="nav-item"><a href="#">Portfolio</a></li>
 					<li class="nav-item"><a href="#">About</a></li>
 					<li class="nav-item"><a href="#">Contact</a></li>
+					<li class="nav-item">
+						<a href="#"><i class="fa fa-envelope"></i></a>
+					</li>
 				</ul>
 				<nav class="nav-button">
 					<i class="fa-solid fa-bars"></i>
@@ -57,11 +60,11 @@
 					</ul>
 				</div>
 				<div class="resume">
-					<h1>
+					<h1 class="font-crete">
 						Hey There. <br />
 						<span>I'm Guishny</span>
 					</h1>
-					<h4>I'm a software Developer</h4>
+					<h4 class="font-inter">I'm a software Developer</h4>
 					<p class="desc">
 						Hello I’m a software developer! I can help you build a product ,
 						feature or website Look through some of my work and experience! If
@@ -72,7 +75,7 @@
 			</div>
 		</section>
 		<section class="my-work" id="my-work">
-			<h1 class="section-title">My Recents works</h1>
+			<h1 class="section-title font-crete">My Recents works</h1>
 			<div class="container cards works grid" id="cards-container">
 				<!-- Card -->
 				<div class="card-featured format">
@@ -80,25 +83,25 @@
 						<img src="./images/Img-Placeholder.png" alt="" />
 					</div>
 					<div class="card-content">
-						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<h3 class="work-title font-crete">Multi-Post Stories</h3>
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
 						</p>
 						<ul class="categories">
-							<li>Html</li>
-							<li>Css</li>
-							<li>Javascript</li>
+							<li class="font-inter">Html</li>
+							<li class="font-inter">Css</li>
+							<li class="font-inter">Javascript</li>
 						</ul>
-						<button class="see-project-btn">See Project</button>
+						<button class="see-project-btn font-inter">See Project</button>
 					</div>
 				</div>
 				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
@@ -109,13 +112,13 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn">See Project</button>
+					<button class="see-project-btn font-inter">See Project</button>
 				</div>
 				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
@@ -126,13 +129,13 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn">See Project</button>
+					<button class="see-project-btn font-inter">See Project</button>
 				</div>
 				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
@@ -143,13 +146,13 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn">See Project</button>
+					<button class="see-project-btn font-inter">See Project</button>
 				</div>
 				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
@@ -160,13 +163,13 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn">See Project</button>
+					<button class="see-project-btn font-inter">See Project</button>
 				</div>
 				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
@@ -177,13 +180,13 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn">See Project</button>
+					<button class="see-project-btn font-inter">See Project</button>
 				</div>
 				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description">
+						<p class="work-description font-inter">
 							I can help you to build beautiful projects, modern and responsive
 							websites, you can see my work on this page, if you are interested
 							do not hesitate to contact me
@@ -194,48 +197,52 @@
 							<li>Javascript</li>
 						</ul>
 					</div>
-					<button class="see-project-btn">See Project</button>
+					<button class="see-project-btn font-inter">See Project</button>
 				</div>
 			</div>
 		</section>
 		<section class="about-me" id="about-me">
 			<div class="resume">
-				<h1>About me</h1>
-				<p class="resume-text">
+				<h1 class="font-crete">About me</h1>
+				<p class="resume-text font-inter">
 					Hello I’m a software developer! I can help you build a product ,
 					feature or website Look through some of my work and experience! If you
 					like what you see and have a project you need coded, don’t hestiate to
 					contact me.
 				</p>
-				<button class="get-myresume-btn">Get my resume</button>
+				<button class="get-myresume-btn font-inter">Get my resume</button>
 			</div>
 			<div class="competence">
 				<ul class="competence-list">
-					<li class="competence-item list-title languages">Languages</li>
-					<li class="competence-item">Javascript</li>
-					<li class="competence-item">Ruby</li>
-					<li class="competence-item">Css</li>
-					<li class="competence-item">Html</li>
+					<li class="competence-item list-title languages font-inter">
+						Languages
+					</li>
+					<li class="competence-item font-inter">Javascript</li>
+					<li class="competence-item font-inter">Ruby</li>
+					<li class="competence-item font-inter">Css</li>
+					<li class="competence-item font-inter">Html</li>
 				</ul>
 				<ul class="competence-list">
-					<li class="competence-item list-title frameworks">Frameworks</li>
-					<li class="competence-item">Bootstrap</li>
-					<li class="competence-item">React</li>
-					<li class="competence-item">Gatsby</li>
-					<li class="competence-item">Laravel</li>
+					<li class="competence-item font-inter list-title frameworks">
+						Frameworks
+					</li>
+					<li class="competence-item font-inter">Bootstrap</li>
+					<li class="competence-item font-inter">React</li>
+					<li class="competence-item font-inter">Gatsby</li>
+					<li class="competence-item font-inter">Laravel</li>
 				</ul>
 				<ul class="competence-list">
-					<li class="competence-item list-title skills">Skills</li>
-					<li class="competence-item">Github</li>
-					<li class="competence-item">Codepen</li>
-					<li class="competence-item">Codesandbox</li>
-					<li class="competence-item">Replit</li>
+					<li class="competence-item font-inter list-title skills">Skills</li>
+					<li class="competence-item font-inter">Github</li>
+					<li class="competence-item font-inter">Codepen</li>
+					<li class="competence-item font-inter">Codesandbox</li>
+					<li class="competence-item font-inter">Replit</li>
 				</ul>
 			</div>
 		</section>
-		<section id="form-section">
+		<section id="contact-section" class="contact-section contact">
 			<div id="form-text" class="form-text">
-				<p class="text">
+				<p class="text font-inter">
 					I'm always interested in hearing about new projects, so if you'd like
 					to chat please get in touch.
 				</p>
@@ -247,23 +254,27 @@
 				class="form"
 			>
 				<ul class="form-container">
-					<li class="form_item">
-						<input
-							type="text"
-							id="name"
-							placeholder="Full Name"
-							required
-							maxlength="30"
-						/>
-					</li>
-					<li class="form_item">
-						<input
-							type="email"
-							id="email"
-							required
-							placeholder="Email Address"
-						/>
-					</li>
+					<div class="row">
+						<li class="form_item">
+							<input
+								type="text"
+								id="name"
+								placeholder="Full Name"
+								required
+								maxlength="30"
+								class="font-inter"
+							/>
+						</li>
+						<li class="form_item">
+							<input
+								type="email"
+								id="email"
+								required
+								placeholder="Email Address"
+								class="font-inter"
+							/>
+						</li>
+					</div>
 					<li>
 						<textarea
 							name="text"
@@ -271,15 +282,21 @@
 							required
 							maxlength="500"
 							placeholder="Enter text here"
+							class="font-inter"
 						></textarea>
 					</li>
 					<li>
-						<button type="submit" class="see-project-btn frm-btn frm-btn">
+						<button
+							type="submit"
+							class="see-project-btn font-inter frm-btn frm-btn"
+						>
 							Get in Touch
 						</button>
 					</li>
 				</ul>
 			</form>
+		</section>
+		<section class="footer-section">
 			<div class="social-media">
 				<ul class="social-media-container">
 					<li class="item">
