Fix Linter errors

--- a/index.html
+++ b/index.html
@@ -255,27 +255,27 @@
 			>
 				<ul class="form-container">
 					<div class="row">
-						<li class="form_item">
+						<li class="form_item item">
 							<input
 								type="text"
 								id="name"
 								placeholder="Full Name"
 								required
 								maxlength="30"
-								class="font-inter"
+								class="font-inter input"
 							/>
 						</li>
-						<li class="form_item">
+						<li class="form_item item">
 							<input
 								type="email"
 								id="email"
 								required
 								placeholder="Email Address"
-								class="font-inter"
+								class="font-inter input"
 							/>
 						</li>
 					</div>
-					<li>
+					<li class="item">
 						<textarea
 							name="text"
 							id="text"
@@ -284,7 +284,7 @@
 							placeholder="Enter text here"
 							class="font-inter"
 						></textarea>
-					</li>
+					</li class="item">
 					<li>
 						<button
 							type="submit"
@@ -300,27 +300,27 @@
 			<div class="social-media">
 				<ul class="social-media-container">
 					<li class="item">
-						<a href="#" class="facebook">
+						<a href="#" class="icon facebook">
 							<i class="fa-brands fa-facebook"></i>
 						</a>
 					</li>
 					<li class="item">
-						<a href="#" class="github">
+						<a href="#" class="icon github">
 							<i class="fa-brands fa-github"></i>
 						</a>
 					</li>
 					<li class="item">
-						<a href="#" class="twitter">
+						<a href="#" class="icon twitter">
 							<i class="fa-brands fa-twitter"></i>
 						</a>
 					</li>
 					<li class="item">
-						<a href="#" class="Instagram">
+						<a href="#" class="icon Instagram">
 							<i class="fa-brands fa-instagram"></i>
 						</a>
 					</li>
 					<li class="item">
-						<a href="#" class="linkedin">
+						<a href="#" class="icon linkedin">
 							<i class="fa-brands fa-linkedin"></i>
 						</a>
 					</li>
