Fix Linter errors

--- a/index.html
+++ b/index.html
@@ -254,27 +254,29 @@
 				class="form"
 			>
 				<ul class="form-container">
-					<div class="row">
-						<li class="form_item item">
-							<input
-								type="text"
-								id="name"
-								placeholder="Full Name"
-								required
-								maxlength="30"
-								class="font-inter input"
-							/>
-						</li>
-						<li class="form_item item">
-							<input
-								type="email"
-								id="email"
-								required
-								placeholder="Email Address"
-								class="font-inter input"
-							/>
-						</li>
-					</div>
+					<li class="item">
+						<ul class="row">
+							<li class="form_item item">
+								<input
+									type="text"
+									id="name"
+									placeholder="Full Name"
+									required
+									maxlength="30"
+									class="font-inter input"
+								/>
+							</li>
+							<li class="form_item item">
+								<input
+									type="email"
+									id="email"
+									required
+									placeholder="Email Address"
+									class="font-inter input"
+								/>
+							</li>
+						</ul>
+					</li>
 					<li class="item">
 						<textarea
 							name="text"
@@ -284,8 +286,8 @@
 							placeholder="Enter text here"
 							class="font-inter"
 						></textarea>
-					</li class="item">
-					<li>
+					</li>
+					<li class="item">
 						<button
 							type="submit"
 							class="see-project-btn font-inter frm-btn frm-btn"
