Make change required by reviewer, use mobile-first methode

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
 		</header>
 		<section id="headline">
 			<div class="headline">
+				<div class="resume">
+					<h1 class="font-crete">
+						Hey There. <br />
+						<span>I'm Guishny</span>
+					</h1>
+					<h4 class="font-inter">I'm a software Developer</h4>
+					<p class="desc">
+						Hello I’m a software developer! I can help you build a product ,
+						feature or website Look through some of my work and experience! If
+						you like what you see and have a project you need coded, don’t
+						hestiate to contact me.
+					</p>
+				</div>
 				<div class="social-network">
 					<ul>
 						<li>
@@ -59,23 +72,11 @@
 						</li>
 					</ul>
 				</div>
-				<div class="resume">
-					<h1 class="font-crete">
-						Hey There. <br />
-						<span>I'm Guishny</span>
-					</h1>
-					<h4 class="font-inter">I'm a software Developer</h4>
-					<p class="desc">
-						Hello I’m a software developer! I can help you build a product ,
-						feature or website Look through some of my work and experience! If
-						you like what you see and have a project you need coded, don’t
-						hestiate to contact me.
-					</p>
-				</div>
+				
 			</div>
 		</section>
 		<section class="my-work" id="my-work">
-			<h1 class="section-title font-crete">My Recents works</h1>
+			<h1 class="section-title font-crete">My Recents works <span></span></h1>
 			<div class="container cards works grid" id="cards-container">
 				<!-- Card -->
 				<div class="card-featured format">
