change my work section for accessibility

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
 		/>
-		<title>My Portfolio</title>
+		<title>Desor Guishny Portfolio</title>
 	</head>
 	<body>
 		<header>
@@ -35,7 +35,7 @@
 						Hey There. <br />
 						<span>I'm Guishny</span>
 					</h1>
-					<h4 class="font-inter">I'm a software Developer</h4>
+					<h2 class="font-inter h4">I'm a software Developer</h2>
 					<p class="desc">
 						Hello I’m a software developer! I can help you build a product ,
 						feature or website Look through some of my work and experience! If
@@ -72,7 +72,6 @@
 						</li>
 					</ul>
 				</div>
-				
 			</div>
 		</section>
 		<section class="my-work" id="my-work">
@@ -81,7 +80,10 @@
 				<!-- Card -->
 				<div class="card-featured format">
 					<div class="featured-image">
-						<img src="./images/Img-Placeholder.png" alt="" />
+						<img
+							src="./images/Img-Placeholder.png"
+							alt="Multi-post Stories Image"
+						/>
 					</div>
 					<div class="card-content">
 						<h3 class="work-title font-crete">Multi-Post Stories</h3>
