--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		</section>
 		<section class="about-me" id="about-me">
 			<div class="resume">
-				<h1 class="font-crete">About me</h1>
+				<h2 class="font-crete">About me</h2>
 				<p class="resume-text font-inter">
 					Hello I’m a software developer! I can help you build a product ,
 					feature or website Look through some of my work and experience! If you
@@ -216,30 +216,38 @@
 				<button class="get-myresume-btn font-inter">Get my resume</button>
 			</div>
 			<div class="competence">
-				<ul class="competence-list">
-					<li class="competence-item list-title languages font-inter">
-						Languages
+				<ul class="languages-list competence ">
+					<li>
+						<h3 class="competence-item list-title languages font-inter">
+							Languages
+						</h3>
+						<ul class="competence-list">
+							<li class="competence-item font-inter">Javascript</li>
+							<li class="competence-item font-inter">Ruby</li>
+							<li class="competence-item font-inter">Css</li>
+							<li class="competence-item font-inter">Html</li>
+						</ul>
 					</li>
-					<li class="competence-item font-inter">Javascript</li>
-					<li class="competence-item font-inter">Ruby</li>
-					<li class="competence-item font-inter">Css</li>
-					<li class="competence-item font-inter">Html</li>
-				</ul>
-				<ul class="competence-list">
-					<li class="competence-item font-inter list-title frameworks">
-						Frameworks
+					<li>
+						<h3 class="competence-item font-inter list-title frameworks">
+							Frameworks
+						</h3>
+						<ul class="competence-list">
+							<li class="competence-item font-inter">Bootstrap</li>
+							<li class="competence-item font-inter">React</li>
+							<li class="competence-item font-inter">Gatsby</li>
+							<li class="competence-item font-inter">Laravel</li>
+						</ul>
+						<li>
+							<h3 class="competence-item font-inter list-title skills">Skills</h3>
+							<ul class="competence-list">
+								<li class="competence-item font-inter">Github</li>
+								<li class="competence-item font-inter">Codepen</li>
+								<li class="competence-item font-inter">Codesandbox</li>
+								<li class="competence-item font-inter">Replit</li>
+							</ul>
+						</li>
 					</li>
-					<li class="competence-item font-inter">Bootstrap</li>
-					<li class="competence-item font-inter">React</li>
-					<li class="competence-item font-inter">Gatsby</li>
-					<li class="competence-item font-inter">Laravel</li>
-				</ul>
-				<ul class="competence-list">
-					<li class="competence-item font-inter list-title skills">Skills</li>
-					<li class="competence-item font-inter">Github</li>
-					<li class="competence-item font-inter">Codepen</li>
-					<li class="competence-item font-inter">Codesandbox</li>
-					<li class="competence-item font-inter">Replit</li>
 				</ul>
 			</div>
 		</section>
