Styling the skill part in about section

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 				</p>
 				<button class="get-myresume-btn font-inter">Get my resume</button>
 			</div>
-			<div class="competence">
-				<ul class="languages-list competence ">
+			<div class="competence-main">
+				<ul class="languages-list ">
 					<li>
 						<h3 class="competence-item list-title languages font-inter">
 							Languages
