--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 					</h1>
 					<h2 class="font-inter h4">I'm a software Developer</h2>
 					<p class="desc">
-						Hello I’m a software developer! I can help you build a product ,
+						Hello I'm a software developer! I can help you build a product ,
 						feature or website Look through some of my work and experience! If
-						you like what you see and have a project you need coded, don’t
+						you like what you see and have a project you need coded, don't
 						hestiate to contact me.
 					</p>
 				</div>
@@ -208,9 +208,9 @@
 			<div class="resume">
 				<h2 class="font-crete">About me</h2>
 				<p class="resume-text font-inter">
-					Hello I’m a software developer! I can help you build a product ,
+					Hello I'm a software developer! I can help you build a product ,
 					feature or website Look through some of my work and experience! If you
-					like what you see and have a project you need coded, don’t hestiate to
+					like what you see and have a project you need coded, don't hestiate to
 					contact me.
 				</p>
 				<button class="get-myresume-btn font-inter">Get my resume</button>
