Add style in skill part

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 					</h1>
 					<h2 class="font-inter h4">I'm a software Developer</h2>
 					<p class="desc">
-						Hello I’m a software developer! I can help you build a product ,
+						Hello I'm a software developer! I can help you build a product ,
 						feature or website Look through some of my work and experience! If
-						you like what you see and have a project you need coded, don’t
+						you like what you see and have a project you need coded, don't
 						hestiate to contact me.
 					</p>
 				</div>
@@ -208,46 +208,45 @@
 			<div class="resume">
 				<h2 class="font-crete">About me</h2>
 				<p class="resume-text font-inter">
-					Hello I’m a software developer! I can help you build a product ,
+					Hello I'm a software developer! I can help you build a product ,
 					feature or website Look through some of my work and experience! If you
-					like what you see and have a project you need coded, don’t hestiate to
+					like what you see and have a project you need coded, don't hestiate to
 					contact me.
 				</p>
 				<button class="get-myresume-btn font-inter">Get my resume</button>
 			</div>
-			<div class="competence-main">
-				<ul class="languages-list ">
+			<div class="competence">
+				<ul class="competence-list">
 					<li>
 						<h3 class="competence-item list-title languages font-inter">
 							Languages
 						</h3>
-						<ul class="competence-list">
-							<li class="competence-item font-inter">Javascript</li>
-							<li class="competence-item font-inter">Ruby</li>
-							<li class="competence-item font-inter">Css</li>
-							<li class="competence-item font-inter">Html</li>
-						</ul>
 					</li>
+					<li class="competence-item font-inter">Javascript</li>
+					<li class="competence-item font-inter">Ruby</li>
+					<li class="competence-item font-inter">Css</li>
+					<li class="competence-item font-inter">Html</li>
+				</ul>
+				<ul class="competence-list">
 					<li>
 						<h3 class="competence-item font-inter list-title frameworks">
 							Frameworks
 						</h3>
-						<ul class="competence-list">
-							<li class="competence-item font-inter">Bootstrap</li>
-							<li class="competence-item font-inter">React</li>
-							<li class="competence-item font-inter">Gatsby</li>
-							<li class="competence-item font-inter">Laravel</li>
-						</ul>
-						<li>
-							<h3 class="competence-item font-inter list-title skills">Skills</h3>
-							<ul class="competence-list">
-								<li class="competence-item font-inter">Github</li>
-								<li class="competence-item font-inter">Codepen</li>
-								<li class="competence-item font-inter">Codesandbox</li>
-								<li class="competence-item font-inter">Replit</li>
-							</ul>
-						</li>
 					</li>
+					<li class="competence-item font-inter">Bootstrap</li>
+					<li class="competence-item font-inter">React</li>
+					<li class="competence-item font-inter">Gatsby</li>
+					<li class="competence-item font-inter">Laravel</li>
+				</ul>
+
+				<ul class="competence-list">
+					<li>
+						<h3 class="competence-item font-inter list-title skills">Skills</h3>
+					</li>
+					<li class="competence-item font-inter">Github</li>
+					<li class="competence-item font-inter">Codepen</li>
+					<li class="competence-item font-inter">Codesandbox</li>
+					<li class="competence-item font-inter">Replit</li>
 				</ul>
 			</div>
 		</section>
