Add Mobile menu structure

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 	</head>
 	<body>
 		<header>
+			<div class="mobile-nav">
+				<ul class="menu-list">
+					<li>
+						<a href="#desk-portfolio" class="mb-item">Portfolio</a>
+					</li>
+					<li>
+						<a href="#desk-about" class="mb-item">About</a>
+					</li>
+					<li>
+						<a href="#desk-contact" class="mb-item">Contact</a>
+					</li>
+				</ul>
+				<div class="btn-close">
+					<nav class="btn-close">
+						<i class="fa-solid fa-xmark"></i>
+					</nav>
+				</div>
+			</div>
 			<div id="nav" class="brand"><a href="#">My Brand</a></div>
 			<nav class="nav-menu">
 				<ul class="nav-container">
