Add Mobile menu structure

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<div class="mobile-nav">
 				<ul class="menu-list">
 					<li>
-						<a href="#desk-portfolio" class="mb-item">Portfolio</a>
+						<a href="#my-work" class="mb-item">Portfolio</a>
 					</li>
 					<li>
-						<a href="#desk-about" class="mb-item">About</a>
+						<a href="#about-me" class="mb-item">About</a>
 					</li>
 					<li>
-						<a href="#desk-contact" class="mb-item">Contact</a>
+						<a href="#contact-me" class="mb-item">Contact</a>
 					</li>
 				</ul>
 				<div class="btn-close">
@@ -34,9 +34,9 @@
 			<div id="nav" class="brand"><a href="#">My Brand</a></div>
 			<nav class="nav-menu">
 				<ul class="nav-container">
-					<li class="nav-item"><a href="#">Portfolio</a></li>
-					<li class="nav-item"><a href="#">About</a></li>
-					<li class="nav-item"><a href="#">Contact</a></li>
+					<li class="nav-item"><a href="#my-work">Portfolio</a></li>
+					<li class="nav-item"><a href="#about-me">About</a></li>
+					<li class="nav-item"><a href="#contact-me">Contact</a></li>
 					<li class="nav-item">
 						<a href="#"><i class="fa fa-envelope"></i></a>
 					</li>
@@ -268,7 +268,7 @@
 				</ul>
 			</div>
 		</section>
-		<section id="contact-section" class="contact-section contact">
+		<section id="contact-me" class="contact-section contact">
 			<div id="form-text" class="form-text">
 				<p class="text font-inter">
 					I'm always interested in hearing about new projects, so if you'd like
