Add event listener to custom.js file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<a href="#"><i class="fa fa-envelope"></i></a>
 					</li>
 				</ul>
-				<nav class="nav-button">
+				<nav class="nav-button" id="nav-button">
 					<i class="fa-solid fa-bars"></i>
 				</nav>
 			</nav>
