Add Mobile popup window

--- a/index.html
+++ b/index.html
@@ -220,6 +220,34 @@
 					</div>
 					<button class="see-project-btn font-inter">See Project</button>
 				</div>
+				<div class="popup" id="popup">
+					<nav class="btn-close">
+						<i class="fa-solid fa-xmark"></i>
+					</nav>
+					<h3 class="popup-title">My Work Title</h3>
+					<ul class="categories">
+						<li>Html</li>
+						<li>Css</li>
+						<li>Javascript</li>
+					</ul>
+					<div class="popup-image">
+						<img
+							src="./images/Snapshoot Portfolio.png"
+							alt="My popup image"
+						/>
+					</div>
+						<p class="popup-text font-inter">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+							  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+							   It has survived not only five centuries, 
+							but also the leap into electronic typesetting, remaining essent
+						</p>
+						<div class="btngroup">
+						<button class="popup-btn font-inter">See Live <span></span><i class="fa-solid fa-satellite-dish"></i></button>
+						<button class="popup-btn font-inter">See source <span><i class="fa-brands fa-github"></i></span></button>
+						</div>
+				</div>
 			</div>
 		</section>
 		<section class="about-me" id="about-me">
