--- a/index.html
+++ b/index.html
@@ -224,29 +224,43 @@
 					<nav class="btn-close">
 						<i class="fa-solid fa-xmark"></i>
 					</nav>
-					<h3 class="popup-title">My Work Title</h3>
+					<h3 class="popup-title">
+						Keeping track of hundreds of components website
+					</h3>
 					<ul class="categories">
 						<li>Html</li>
 						<li>Css</li>
 						<li>Javascript</li>
 					</ul>
-					<div class="popup-image">
-						<img
-							src="./images/Snapshoot Portfolio.png"
-							alt="My popup image"
-						/>
-					</div>
-						<p class="popup-text font-inter">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-							 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-							  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-							   It has survived not only five centuries, 
-							but also the leap into electronic typesetting, remaining essent
-						</p>
-						<div class="btngroup">
-						<button class="popup-btn font-inter">See Live <span></span><i class="fa-solid fa-satellite-dish"></i></button>
-						<button class="popup-btn font-inter">See source <span><i class="fa-brands fa-github"></i></span></button>
+					<div class="d-flex">
+						<div class="popup-image">
+							<img
+								src="./images/Snapshoot Portfolio.png"
+								alt="My popup image"
+							/>
 						</div>
+						<div class="right-side">
+							<p class="popup-text font-inter">
+								Lorem Ipsum is simply dummy text of the printing and typesetting
+								industry. Lorem Ipsum has been the industry's standard dummy
+								text ever since the 1500s, when an unknown printer took a galley
+								of type and scrambled it 1960s with the releaLorem Ipsum is
+								simply dummy text of the printing and typesetting industry.
+								Lorem Ipsum has been the industry's standard dummy text ever
+								since the 1500s, when an unknown printer took a galley of type
+								and scrambled it 1960s with the releax map lapora verita.
+							</p>
+							<div class="btngroup">
+								<button class="popup-btn font-inter">
+									See Live <span></span
+									><i class="fa-solid fa-satellite-dish"></i>
+								</button>
+								<button class="popup-btn font-inter">
+									See source <span><i class="fa-brands fa-github"></i></span>
+								</button>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
